--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "pusher": "^3.0.1",
     "pusher-js": "^7.0.0",
     "react": "^16.13.1",
