--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_PATH='chat-api.santospierre.com/api'
+REACT_APP_API_PATH='https://chat-api.santospierre.com/api'
 REACT_APP_PUSHER_APP_KEY=3ec5353094d586320828
 REACT_APP_PUSHER_APP_CLUSTER='eu'
